--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "12.1.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
